# investi

./: .gitignore  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  teste_rapido.py
docs/: README.md  prompts.md  tutorial_jupyter.md
exemplos/: __init__.py  simulacao_aportes.py  simulacao_basica.py  simulacao_cenarios.py  simulacao_datas_diferentes.py  simulacao_tesouro.py
investi/: __init__.py
investi/carteira/: __init__.py  carteira.py
investi/dados/: __init__.py  cdi.py  cdi_exemplo.json  ipca.py  ipca_exemplo.json
investi/examples/: benchmark.py
investi/investimentos/: __init__.py  base.py  cdi.py  ipca.py  prefixado.py  selic.py
investi/simulacao/: __init__.py  motor_simulacao.py
streamlit_app/pages/: 1_Simulador_de_Carteira.py  3_Comparador_de_Investimentos.py
streamlit_apps/: __init__.py  comparador_investimentos.py  dashboard.py  run.py  simulador_aportes.py
streamlit_multipage/: Home.py  README.md
streamlit_multipage/pages/: 2_Simulador_de_Aportes.py
tests/: conftest.py  test_carteira.py  test_investimento_base.py  test_investimento_ipca.py  test_simulacao_dataframe.py
